# associative-law-checker

./: CMakeLists.txt  main.cpp  multitable.cpp  multitable.hpp  nhfstr.cpp  table1.txt  table2.txt  table3.txt
